<resources>
    <string name="app_name">树选</string>
    <string name="confirm_login">确认登录</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="other_login_methods">其他方式登录</string>
    <string name="phone_number_can_not_null">手机号码不能为空</string>
    <string name="please_input_correct_phone_number">请输入正确的手机号码</string>
    <string name="captcha_code_sent">验证码已发送</string>
    <string name="verification_code_can_not_null">验证码不能为空</string>
    <string name="bind_succeed">绑定成功</string>
    <string name="please_bind_phone">请先绑定手机</string>
    <string name="uninstall_app">未安装%1$s客户端</string>
    <string name="home_page">首页</string>
    <string name="message">消息</string>
    <string name="settle_in">入驻</string>
    <string name="business_district">商圈</string>
    <string name="mine">我的</string>
    <string name="user_login">用户登录</string>
    <string name="store_login">商家登录</string>
    <string name="binding_phone_number">绑定手机号</string>
    <string name="binding_phone_number_hint">首次登录需要绑定手机号</string>
    <string name="input_phone_number">输入手机号码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="resend">重新发送</string>
    <string name="verification">验证</string>
    <string name="send_verificatione_code_hint">如果没有收到验证码，可以在倒计时结束后重新发送</string>
    <string name="dont_get_phone_number">未获取到手机号码</string>
    <string name="change_avatar">更换头像</string>
    <string name="edit_profile">编辑资料</string>
    <string name="my_catransition">my_catransition</string>
    <string name="alipay">支付宝</string>
    <string name="version_update">版本更新</string>
    <string name="account_security">账户安全</string>
    <string name="change_bind_phone_number">修改绑定手机号</string>
    <string name="update_phone">修改手机号</string>
    <string name="input_new_phone_number">输入新号码</string>
    <string name="binding_new_phone_number">绑定新号码</string>
    <string name="done">完成</string>
    <string name="shipping_address_can_not_null">收货地址不能为空</string>
    <string name="search_poi_hint">请输入地址名称</string>
    <string name="select_receiving_address">选择地址</string>
    <string name="navigation">导航</string>
    <string name="delete">删除</string>
    <string name="compile_address_succeed">编辑地址成功</string>
    <string name="modify_succeed">修改成功</string>
    <string name="get_share_pictures_failed">分享图获取失败</string>
    <string name="hint_bank_cart_number">请填写您的卡号</string>
    <string name="hint_bank_card_number">请填写您银行预留号码</string>
    <string name="please_relogin">请重新登录</string>
    <string name="gaode_map">高德地图</string>
    <string name="baidu_map">百度地图</string>
    <string name="tencent_map">腾讯地图</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="confirm_logoff">确定注销账号？</string>
    <string name="skip">跳过</string>
    <string name="experience_immediately">立即体验</string>
    <string name="store_shuxuan">树选商家端</string>
    <string name="client_shuxuan">树选客户端</string>
    <string name="business_time">营业时间</string>
    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="change_phone_number">修改手机号</string>
    <string name="not_get_voice_player_url">没有获取到音频播放路径</string>
    <string name="audio_play_error">音频播放异常</string>
    <string name="please_get_recording_permissions">请获取录音权限</string>
    <string name="please_get_read_write_permissions">请获文件取读写权限</string>
    <string name="payment_succeed" />
    <string name="service_agreement_and_privacy_policy">服务协议和隐私政策</string>
    <string name="not_to_use">暂不使用</string>
    <string name="consent">同意</string>

    <string name="privacy_policy">请你务必审慎阅读、充分理解“服务协议”和“隐私政策”各个条款，包括但不限于：为了向你提供即时通讯、内容分享等服务，我们需要收集你的设备信息、操作日志等个人信息。你可以在“设置”中查看、变更、删除个人信息并管理你的授权。你可阅读《服务协议》和《隐私政策》了解详细信息。如你同意，请点击“同意”开始接受我们的服务。</string>

    <string name="login_agreement">我已阅读并同意 《服务协议》和《隐私政策》</string>

    <string name="find_x_contact">找到%1$s个联系人</string>

    <string name="filter_bank_num">0123456789zxcvbnmasdfghjklqwertyuiopZXCVBNMASDFGHJKLQWERTYUIOP</string>

    <string name="please_agree_to_the_terms_of_service">请同意服务条款</string>

    <string name="phone_number_of_verification_code_cannot_null">手机号或验证码不能为空</string>

    <string name="go_navigation">去导航</string>

    <string name="copy">复制</string>
    <string name="logout">注销</string>

    <string name="revocation">撤回</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="refuse">拒绝</string>
    <string name="no_longer_remind">不再提醒</string>
    <string name="store">店铺</string>
    <string name="notification_message">通知消息</string>
    <string name="message_settop">置顶消息</string>
    <string name="delete_record">删除记录</string>
    <string name="turn_the_text">转文字</string>
    <string name="address_info">地址信息</string>
    <string name="no_get__mobile_phone_number">没有获取到手机号码</string>
    <string name="speech_recognition_failure">语音识别失败</string>
    <string name="upload_authentication_video">上传认证视频</string>
    <string name="face_identification">人脸识别</string>
    <string name="start_certification">开始认证</string>
    <string name="please_login_after_browse_business_district">请先登录才可查我的商圈哦~</string>
    <string name="please_login_before_operation">请先登录后再操作</string>
    <string name="go_authentication">去认证</string>
    <string name="unknow">未知</string>
    <string name="shop_qualification">店铺资质</string>
    <string name="confirm_del_address">确定要删除地址吗？</string>
    <string name="cancel_settop">取消置顶</string>
    <string name="take_a_break">点太快了，休息一下吧。</string>
    <string name="copy_address_info">复制地址信息</string>
    <string name="discounts">优惠</string>
    <string name="rules_of_use">使用规则</string>
    <string name="notice_for_use">使用须知</string>
    <string name="matters_need_attention">注意事项</string>
    <string name="near_shop">附近\n小店</string>

</resources>