<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipChildren="false">

    <FrameLayout
        android:id="@+id/main_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menu_layout"/>

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:clipChildren="false"
        android:orientation="horizontal"
        android:background="#EDEDED">

        <com.gxdingo.sg.view.CircularRevealButton
            android:id="@+id/home_page_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            app:anim_show="false"
            app:defocus_color="@color/gray202"
            app:defocus_icon="@drawable/module_svg_main_menu_client_home_unselected"
            app:focus_color="@color/main_tone"
            app:focus_icon="@drawable/module_svg_main_menu_client_home_selected"
            app:is_selected="true"
            app:text="@string/home_page" />

        <com.gxdingo.sg.view.CircularRevealButton
            android:id="@+id/message_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            app:anim_show="false"
            app:defocus_color="@color/gray202"
            app:defocus_icon="@drawable/module_svg_main_menu_client_message_unselected"
            app:focus_color="@color/main_tone"
            app:focus_icon="@drawable/module_svg_main_menu_client_message_selected"
            app:is_selected="false"
            app:text="@string/message" />

        <com.gxdingo.sg.view.CircularRevealButton
            android:id="@+id/settle_in"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            app:anim_show="false"
            app:defocus_color="@color/gray202"
            app:defocus_icon="@drawable/module_svg_main_menu_client_settle_in"
            app:is_selected="false"
            app:text="@string/settle_in" />

        <com.gxdingo.sg.view.CircularRevealButton
            android:id="@+id/business_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            app:anim_show="false"
            app:defocus_color="@color/gray202"
            app:defocus_icon="@drawable/module_svg_main_menu_client_business_district_unselected"
            app:focus_color="@color/main_tone"
            app:focus_icon="@drawable/module_svg_main_menu_client_business_district_selected"
            app:is_selected="false"
            app:text="@string/business_district" />

        <com.gxdingo.sg.view.CircularRevealButton
            android:id="@+id/mine_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginVertical="5dp"
            app:anim_show="false"
            app:defocus_color="@color/gray202"
            app:defocus_icon="@drawable/module_svg_main_menu_client_mine_unselected"
            app:focus_color="@color/main_tone"
            app:focus_icon="@drawable/module_svg_main_menu_client_mine_selected"
            app:is_selected="false"
            app:text="@string/mine" />

    </LinearLayout>

</RelativeLayout>