<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="42dp"
    android:paddingBottom="150dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="MissingConstraints">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/binding_phone_number"
        android:textColor="@color/text_secondary"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="2dp"
        android:text="@string/binding_phone_number_hint"
        android:textColor="@color/text_secondary2"
        android:textSize="14sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+86"
            android:textColor="@color/text_secondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.gxdingo.sg.view.RegexEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:background="@color/white"
            android:hint="@string/input_phone_number"
            android:inputType="phone"
            android:textColorHint="@color/text_secondary2"
            android:textSize="14sp"
            app:regexType="mobile" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_color"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/send_verification_code_bt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/module_bg_main_color_round6"
        android:stateListAnimator="@null"
        android:text="@string/get_verification_code"
        android:textColor="@color/white" />


</LinearLayout>
