<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/module_shape_border_c6cce6_solid_white_6c"
    tools:ignore="MissingConstraints">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/service_agreement_and_privacy_policy"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/protocol_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingTop="15dp"
        android:paddingRight="25dp"
        android:paddingBottom="@dimen/dp15"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv"></TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grayfa"
        app:layout_constraintTop_toBottomOf="@+id/protocol_tv"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/protocol_tv">

        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/dp15"
            android:paddingBottom="@dimen/dp15"
            android:text="@string/not_to_use"
            android:textColor="@color/black"
            android:textSize="18sp"></TextView>

        <TextView
            android:id="@+id/consent_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/dp15"
            android:paddingBottom="@dimen/dp15"
            android:text="@string/consent"
            android:textColor="@color/deepskyblue"
            android:textSize="18sp"></TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
