<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingBottom="150dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="MissingConstraints">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/input_verification_code"
        android:textColor="@color/title_color"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/verification_code_send_hint_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="2dp"
        android:text="验证码已发送至+86 13788110785"
        android:textColor="@color/text_secondary2"
        android:textSize="14sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">


        <com.gxdingo.sg.view.RegexEditText
            android:id="@+id/et_verification_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:hint="@string/input_verification_code"
            android:inputType="number"
            android:textColorHint="@color/text_secondary2"
            android:textSize="14sp"
            app:layout_constraintRight_toLeftOf="@+id/line_tv"
             />

        <TextView
            android:id="@+id/line_tv"
            android:layout_width="1dp"
            android:layout_height="12dp"
            android:background="@color/grayf8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/send_code"
            app:layout_constraintTop_toTopOf="parent" />

        <com.gxdingo.sg.view.CountdownView
            android:id="@+id/send_code"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/resend"
            android:textColor="@color/main_tone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divide_color"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/verificatione_bt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/module_bg_main_color_round6"
        android:stateListAnimator="@null"
        android:text="@string/verification"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/send_verificatione_code_hint"
        android:textColor="@color/text_secondary2"
        android:textSize="12sp" />

</LinearLayout>
