<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/module_shape_bg_white_round6"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">


    <CheckBox
        android:id="@+id/not_remind_ckb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="5dp"
        android:button="@drawable/module_checkbox2_style"
        android:text="@string/no_longer_remind"
        android:textColor="@color/gray11"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:textColor="#FF0000"
        android:textSize="16sp"
        tools:text="该优惠券仅适用于通过树选完成转账的交易，如通过其他方式转账，则优惠券无效，不予提现" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="14dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/module_shape_border_green_6r"
            android:gravity="center"
            android:text="@string/refuse"
            android:textColor="@color/main_tone"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@drawable/module_bg_main_color_round6"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/consent"
            android:textColor="@color/white"

            android:textSize="14sp" />

    </LinearLayout>


</LinearLayout>